@Impelemented timeout functionality, and fixed error handling of fsockopen() on win32 Also fixed error handling on unix (micropatch)

Closes Bug #14740


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@85338 c90b9560-bf6c-de11-be94-00142212c4b1