main/php_network.h
@@ -15,7 +15,7 @@
    | Author: Stig Venaas <venaas@uninett.no>                              |
    +----------------------------------------------------------------------+
  */
-/* $Id: php_network.h,v 1.20 2002/03/19 17:49:00 wez Exp $ */
+/* $Id: php_network.h,v 1.21 2002/06/11 03:55:28 jason Exp $ */
 
 #ifndef _PHP_NETWORK_H
 #define _PHP_NETWORK_H
@@ -87,6 +87,11 @@ typedef struct {
 
 int php_hostconnect(const char *host, unsigned short port, int socktype, int timeout);
 PHPAPI int php_connect_nonb(int sockfd, const struct sockaddr *addr, socklen_t addrlen, struct timeval *timeout);
+
+#ifdef PHP_WIN32
+PHPAPI int php_connect_nonb_win32(SOCKET sockfd, const struct sockaddr *addr, socklen_t addrlen, struct timeval *timeout);
+#endif
+
 void php_any_addr(int family, php_sockaddr_storage *addr, unsigned short port);
 int php_sockaddr_size(php_sockaddr_storage *addr);
 
